--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-status-codes": "^2.3.0",
     "marked": "^14.1.0",
     "mongoose": "^8.6.0",
     "sanitize-html": "^2.13.0",
